--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -21,15 +21,15 @@
 
 
     <main class="col-12 d-flex justify-content-center align-items-center">
-      <aside class="col-6">
-        <div style="margin-right: 50px">
+      <aside>
+        <div style="margin-right: 100px">
           <h1>Learn to code by watching others</h1>
           <p> See how experienced developers solve problems in real-time. <br> Watching scripted tutorials is great,
             but understanding how developers think is invaluable.</p>
         </div>
 
       </aside>
-      <aside class="col-6 mr-5">
+      <aside>
         <button class="btn btn-primary" style="margin-bottom: 10px; background-color: #5d54a4"><strong>Try it free 7
             days</strong> then $20/month thereafter</button>
         <div class="card">
