responsive is done

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -24,7 +24,7 @@
       <aside>
         <div style="margin-right: 100px">
           <h1>Learn to code by watching others</h1>
-          <p> See how experienced developers solve problems in real-time. <br> Watching scripted tutorials is great,
+          <p style="color: white"> See how experienced developers solve problems in real-time. <br> Watching scripted tutorials is great,
             but understanding how developers think is invaluable.</p>
         </div>
 
@@ -57,7 +57,7 @@
               </div>
               <button type="submit" class="btn btn-success mt-3">Claim your free trial</button>
               <p>
-                By clicking the button, you are agreeing to our <a href="">Terms and Services</a> </p>
+                By clicking the button, you are agreeing to our <a href="" style="color: #ff7876; text-decoration: none">Terms and Services</a> </p>
             </form>
           </div>
         </div>
